--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,20 +1,11 @@
 <resources>
     <string name="app_name">VTB_hack</string>
     <string name="server_error">Что-то пошло не так на сервере</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
+    <string name="settings_message">Выберете параментры поиска</string>
 
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="cancel">Отменить</string>
+    <string name="submit">Подтвердить</string>
 
     <!-- Услуги -->
     <string name="transit"> Перевод денежных средств</string>
