--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VTB_hack</string>
+    <string name="app_name">Шайлушай</string>
     <string name="server_error">Что-то пошло не так на сервере</string>
 
     <string name="settings_message">Выберете параментры поиска</string>
